Set the stage size to a 16:9 ratio Reduce the characters to 16x16px Add direction strategy to bullet create upordownbullet class

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/classes/game/entities/volumes/Box.js"></script>
         
         <script src="scripts/classes/game/entities/bullets/TinyBullet.js"></script>
+        <script src="scripts/classes/game/entities/bullets/UpOrDownBullet.js"></script>
         
         <script src="scripts/classes/game/entities/sword/ExCalibur.js"></script>
         <script src="scripts/classes/game/entities/sword/RedBane.js"></script>
